--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Just a collection of python utilities I regularly use for my experiments.
+Includes functions for computing Krippendorff's Alpha with support for nominal, ordinal and interval valued judgments.
